Mon Feb 02 17:33:41 PST 2004  Christian Hammond <chipx86@gnupdate.org>

	* src/main.cpp:
	  - Increase the fade time to 3 seconds.

Sat Aug 16 23:55:29 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/MapObject.cpp:
	* src/MapObject.h:
	  - MapObjects are now notified when their direction changes.
	    Sheep will implement this later.

Sat Aug 16 23:19:18 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/MapObject.cpp:
	* src/MapObject.h:
	  - Added a function for setting the direction of an object.

Sat Aug 16 20:24:21 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/Direction.h:
	  - Added a Direction enum.

Sat Aug 16 13:19:02 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* images/sheep-0.png:
	* images/sheep-135.png:
	* images/sheep-180.png:
	* images/sheep-225.png:
	* images/sheep-270.png:
	* images/sheep-315.png:
	* images/sheep-45.png:
	* images/sheep-90.png:
	* images/tile_grass_1.png:
	* images/tile_grass_red.png:
	* images/tiles/Makefile.am:
	* images/tiles/grass_brown_1.png:
	* images/tiles/grass_green_1.png:
	* src/IsoMapObject.cpp:
	* src/IsoMapObject.h:
	* src/IsoMapObjectFactory.cpp:
	* src/IsoMapTile.h:
	* src/MapTile.h:
	* src/main.cpp:
	  - Changed the tile size, and updated the images. Also put new,
	    better grass images in.

Sat Aug 16 12:37:50 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/IsoMapObject.cpp:
	* src/IsoMapObject.h:
	* src/IsoMapObjectFactory.cpp:
	* src/IsoMapTile.cpp:
	* src/MapObject.cpp:
	* src/MapObject.h:
	* src/MapTile.cpp:
	* src/MapTile.h:
	* src/main.cpp:
	  - Objects now have individual heights set, and sheep are being
	    stacked up again.

Sat Aug 16 12:26:52 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/IsoMapObject.cpp:
	* src/MapObject.cpp:
	* src/MapObject.h:
	* src/main.cpp:
	  - The y offset on objects is now affected when there are objects
	    beneath it.

Sat Aug 16 12:22:49 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/MapData.cpp: